# booruDownloader

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  default.nix  default_conf.json  exampleConfig  install.sh  main_bk.cpp  meson.build  readme.md  result  roadmap.md
.github/workflows/: cmake-multi-platform.yml  main.yml
include/: args.h  baseCLI.h  cli.h  commands.h  config.h  danbooru.h  danbooruFetch.h  define.h  download.h  fetchData.h  term.h
src/: .config.cpp.swp  .meson.build.swp  CLI.cpp  args.cpp  commands.cpp  config.cpp  danbooru.cpp  danbooruFetch.cpp  download.cpp  fetchData.cpp  installScript.sh  main.cpp  main.rs  meson.build  term.cpp  termFuncs.cpp  termcolor.cpp
